--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
 # requirements.txt
-"""
-Dependencies for the comic price scraper
-"""
+# Dependencies for the comic price scraper
 requests==2.31.0
 beautifulsoup4==4.12.2
 lxml==5.1.0
